--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,8 @@
 services:
-#    user.example:
-#        class: UserBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    user.registration_completed_listener:
+        class: UserBundle\EventListener\RegistrationListener
+        arguments: ["@router"]
+        tags:
+            - name: kernel.event_listener
+              event: fos_user.registration.success
+              method: onRegistrationSuccess
