--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    form.type.new_column:
+        class: AppBundle\Form\NewColumnType
+        arguments: ["@doctrine.orm.entity_manager"]
+        tags:
+            - { name: form.type }
